# tg

./: .dockerignore  .gitignore  Cargo.toml  bitcoin.conf  check-all.sh  clean-all.sh  clippy-all.sh  docker-compose.yml  exchange-Dockerfile  fund-players.sh  nmc-id-Dockerfile  player-cli.sh  rbtr-private-Dockerfile  rbtr-public-Dockerfile  readme.md  run_docker.sh  update-all.sh
PlayerApp/: .gitignore  App.tsx  package-lock.json  package.json
PlayerApp/android/: build.gradle
PlayerApp/android/app/: build.gradle
PlayerApp/android/app/src/main/java/com/playerapp/: MainApplication.java  PlayerAppPackage.java  PlayerWalletModule.java
PlayerApp/ios/PlayerApp/: Info.plist
PlayerApp/ios/PlayerApp.xcodeproj/: project.pbxproj
PlayerApp/rust/: Cargo.toml
PlayerApp/rust/src/: lib.rs
PlayerApp/src/: PlayerWallet.ts  datatypes.ts  dump.ts  mock.ts  redux.ts  secret.ts  styles.ts  wallet.ts
PlayerApp/src/components/: arbiter.tsx  change-local-player.tsx  check-mail.tsx  contract-action.tsx  contract-list-item.tsx  contract-summary.tsx  currency.tsx  passphrase-entry.tsx  password-entry.tsx  payout-summary.tsx  player-portrait.tsx  player-selector.tsx  sig-portrait.tsx  signature-switch.tsx
PlayerApp/src/components/screens/: add-player.tsx  contract-details.tsx  home.tsx  init-wallet.tsx  loading-splash.tsx  local-player-select.tsx  new-contract.tsx  new-payout.tsx  new-player.tsx  player-select.tsx  post-contract-info.tsx  receive-contract.tsx  request-payout.tsx
arb/: Cargo.toml  Dockerfile
arb/src/: lib.rs  rpc.rs
arb/src/key/: client.rs
arb/src/script/: interpreter.rs  parser.rs
docs/: Gemfile  _config.yml  about.markdown
docs/_posts/: 2020-08-16-basics.markdown  2020-08-16-cipher.markdown  2020-08-16-welcome-to-jekyll.markdown  2020-08-21-contract-creation.markdown  2020-08-21-contract-validation.markdown  2020-08-21-payout-request-creation.markdown  2020-08-21-payout-request-validation.markdown  2020-08-21-payout-validation.markdown  2020-08-21-player_arbiter_ids.markdown  2020-08-21-validation.markdown  2020-08-22-contract-signing.markdown  2020-08-28-wallet-details.markdown  2020-10-31-mock-architecture.markdown  2020-10-31-mock-structure.markdown  2020-12-06-more-structure.markdown  2020-12-06-updated-structure.markdown  2020-12-07-contract-payout-updates.markdown
exchange/: Cargo.toml
exchange/src/: lib.rs  main.rs
nmc-id/: Cargo.toml
nmc-id/src/: main.rs  rpc.rs
nmcd/: Dockerfile  namecoin.conf  nmcd-Dockerfile
player-app/: App.tsx  app.json  package-lock.json  package.json
player-app-old/src/: dump.ts  styles.ts
player-app-old/src/components/: contract-summary.tsx  currency.tsx  player-portrait.tsx  player-selector.tsx  signature-switch.tsx
player-app-old/src/components/screens/: add-player.tsx  home.tsx  local-player-select.tsx  new-local-player.tsx
player-app/src/: datatypes.ts  dump.ts  mock.ts  redux.ts  store.ts  styles.ts
player-app/src/components/: arbiter.tsx  challenge-action.tsx  challenge-list-item.tsx  challenge-summary.tsx  change-local-player.tsx  contract-action.tsx  player-selector.tsx  sig-portrait.tsx
player-app/src/components/screens/: add-player.tsx  challenge-details.tsx  home.tsx  local-player-select.tsx  new-challenge.tsx  new-contract.tsx  new-local-player.tsx  request-payout.tsx
player-cli/: Cargo.toml
player-cli/src/: lib.rs  main.rs
player-identity/: Cargo.toml
player-wallet/: Cargo.toml
player-wallet/src/: arbiter.rs  db.rs  exchange.rs  lib.rs  main.rs  mock.rs  player.rs  ui.rs  wallet.rs
rbtr-private/: Cargo.toml
rbtr-private/src/: main.rs  wallet.rs
rbtr-public/: Cargo.toml
rbtr-public/src/: main.rs  wallet.rs
referee-app/: app.json
referee-signer/: Cargo.toml
referee-signer/src/: main.rs
src/: lib.rs  main.rs  rpc.rs
src/key/: client.rs  mod.rs  server.rs
src/script/: interpreter.rs  lib.rs  mod.rs  parser.rs
tglib/: Cargo.toml
tglib/src/: arbiter.rs  contract.rs  lib.rs  mock.rs  payout.rs  player.rs  wallet.rs
tglib/src/script/: interpreter.rs  lib.rs  mod.rs  parser.rs
ump/: .dockerignore  docker-compose.yml  publisher-Dockerfile  signer-Dockerfile  web-Dockerfile
ump/publisher/: Cargo.toml
ump/publisher/src/: db.rs  main.rs
ump/signer/: Cargo.toml
ump/signer/src/: main.rs
ump/ump/: Cargo.toml
ump/ump/src/: lib.rs
ump/web/: package-lock.json  package.json
ump/web/src/: App.tsx  datatypes.ts
ump/web/src/components/: game-info-display.tsx  game-info-list.tsx  team-avatar.tsx  winner-display.tsx
wallet/: Cargo.toml
wallet/src/: contract.rs  lib.rs  payout.rs  payout_request.rs
