[package]
name = "exchange"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

[lib]
name = "libexchange"
path = "src/lib.rs"

[[bin]]
name = "exchange"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
