[package]
name = "exchange"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

[lib]
name = "libexchange"
path = "src/lib.rs"

[[bin]]
name = "exchange"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
redis = { version = "0.17", features = ["tokio-comp"] }
simple_logger = "1.11.0"
reqwest = { version="0.11.2", features = ["blocking", "json"] }
