[package]
name = "nmc-id"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
redis = "0.17"
serde_json = "1.0"
