[package]
name = "nmc-id"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
reqwest = { version="0.11.2", features = ["blocking", "json"] }
