[package]
name = "player-cli"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
player-wallet = { path = "../player-wallet" }
clap = "2"
rustyline = "6.2.0"
shell-words= "1.0"
