[package]
name = "player-cli"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

[[bin]]
name = "player-cli"
path = "src/main.rs"

[lib]
name = "libcli"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
player-wallet = { path = "../player-wallet" }
exchange = { path = "../exchange" }
clap = "2"
rustyline = "6.2.0"
shell-words= "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11.0"

[dev-dependencies]
rand = "0.8.3"
