[package]
name = "player-wallet"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk" }
bip39 = "1.0.0-rc1"
tglib = { path = "../tglib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "2"
log = "0.4"
hex = "0.4.2"
chrono = "0.4"
fern = "0.6"
rustyline = "6.2.0"
shell-words= "1.0"
rusqlite = { version = "0.20", features = ["bundled"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
bitcoincore-rpc = "0.12.0"
