[package]
name = "player-wallet"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "^2"
rustyline = "6.2.0"
shell-words= "1.0"
rusqlite = { version = "0.24.2", features = ["bundled"] }
tokio = { version = "^0.2", features = ["full"] }
sled = "0.34.6"
[dev-dependencies]
bitcoincore-rpc = "^0.1"
