[package]
name = "player-wallet"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
exchange = { path = "../exchange" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
clap = "^2"
rustyline = "6.2.0"
shell-words= "1.0"
rusqlite = { version = "0.25.3", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34.6"
reqwest = { version= "0.11.2", features = ["blocking", "json"] }
[dev-dependencies]
bitcoincore-rpc = "^0.1"
