[package]
name = "rbtr-private"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk" }
bip39 = "1.0.0-rc1"
tglib = { path = "../tglib" }
tokio = { version = "0.2", features = ["full"] }
hex = "0.4.2"
redis = "0.17"
