[package]
name = "rbtr-private"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.17", features = ["tokio-comp"] }
simple_logger = "1.11.0"
