[package]
name = "rbtr-public"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tglib = { path = "../tglib" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sled = "0.34"
redis = { version = "0.17", features = ["tokio-comp"] }
serde_json = "1.0"
bitcoincore-rpc = "0.12.0"
reqwest = { version="0.11.2", features = ["blocking", "json"] }
simple_logger = "1.11.0"
