[package]
name = "tglib"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.3"
bip39 = "1.0.0-rc1"
hex = "0.4.2"
nom = "5.1.2"
byteorder = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
