[package]
name = "tglib"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/davemo88/bdk", branch = "mybranch" }
bip39 = "1.0.0-rc1"
hex = "0.4.2"
nom = "5.1.2"
byteorder = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
secrecy = "0.7"
rand = "0.8.3"
age = { git = "https://github.com/str4d/rage", branch = "main" }
rust-argon2 = "0.8"
