[package]
name = "tglib"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { git = "https://github.com/davemo88/bdk", branch = "mybranch" }
bip39 = "1.0.0"
hex = "0.4.3"
nom = "6.1.2"
log = "0.4.14"
byteorder = "1.4.3"
serde = { version = "1.0.125", features = ["derive"] }
secrecy = "0.7.0"
rand = "0.8.3"
age = { git = "https://github.com/str4d/rage", branch = "main" }
rust-argon2 = "0.8.3"
