[package]
name = "wallet"
version = "0.1.0"
authors = ["dk <dk@dk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.23.0"
secp256k1 = { version = "0.17.2", features = ["rand-std", "serde"] }
hex = "0.4.2"
byteorder = "1.3.4"
bitcoin-wallet = "1.1.0"
btc-transaction-utils = { git = "https://github.com/exonum/btc-transaction-utils" }
tglib = { path = "../tglib" }
