[package]
name = "signer"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ump = { path = "../ump" }
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = "^1"
serde_json = "1.0"
simple_logger = "1.11.0"
chrono = "0.4.19"
